--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,15 @@
 {
-  "short_name": "Note-ice Me",
-  "name": "Note-ice Me, Senpai",
+  "short_name": "Notepad",
+  "name": "React Notepad",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "android-chrome-192x192.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "android-chrome-256x256.png",
+      "sizes": "256x256",
       "type": "image/png"
     }
   ],
